<resources>
    <string name="app_name">BandFair</string>
    <string name="spl_et_login">Username or E-Mail</string>
    <string name="spl_et_pwd">Password</string>
    <string name="spl_bt_signin">Sign In</string>
    <string name="spl_bt_register">Don\'t have an account yet?</string>
    <string name="spl_bt_signup">Sign Up</string>
    <string name="spl_tv_title">BandFair</string>
    <string name="rg1_tv_title">Register in BandFair</string>
    <string name="rg1_et_username">Username</string>
    <string name="rg1_et_email">Email</string>
    <string name="rg2_et_birthdate">Birth Date</string>
    <string name="rg_bt_next">Next</string>

    <string name="rg3_tv_instruments">Instruments</string>
    <string name="rg3_cb_guitar">Guitar</string>
    <string name="rg3_cb_bass">Bass</string>
    <string name="rg3_cb_drums">Drums</string>
    <string name="rg3_cb_vocal">Vocals</string>
    <string name="rg3_cb_keys">Keys</string>
    <string name="rg3_et_other">Others</string>

    <string name="rg3_bt_add">Add</string>
    <string name="rg3_tv_genres">Genres</string>
    <string name="rg3_cb_rock">Rock</string>
    <string name="rg3_cb_pop">Pop</string>
    <string name="rg3_cb_country">Country</string>
    <string name="rg3_cb_jazz">Jazz</string>
    <string name="rg3_cb_pagode">Pagode</string>
    <string name="rg1_et_pwd">Password</string>
    <string name="rg1_tv_login">Login Info</string>
    <string name="rg2_et_name">Name</string>
    <string name="rg3_tv_birthdate">Birthdate</string>
    <string name="pf_tv_name">Name</string>
    <string name="pf_tv_instruments_label">Instruments</string>
    <string name="pf_tv_genres_label">Genres</string>
    <string name="ma_et_search">Search</string>
    <string name="pf_bt_save">Save</string>
    <string name="rg2_tv_sex">Sex</string>
    <string name="rg2_rb_male">Male</string>
    <string name="rg2_rb_female">Female</string>
    <string name="rg2_tv_location">Location</string>
    <string name="ma_bt_search">search</string>

    <string-array name="ma_et_cat">
        <item>Select</item>
        <item>Name</item>
        <item>Location</item>
        <item>Instrument</item>
        <item>Genre</item>
    </string-array>

    <string-array name="rg2_sp_year">
        <item>2018</item>
        <item>2017</item>
        <item>2016</item>
        <item>2015</item>
        <item>2014</item>
        <item>2013</item>
        <item>2012</item>
        <item>2011</item>
        <item>2010</item>
        <item>2009</item>
        <item>2008</item>
        <item>2007</item>
        <item>2006</item>
        <item>2005</item>
        <item>2004</item>
        <item>2003</item>
        <item>2002</item>
        <item>2001</item>
        <item>2000</item>
        <item>1999</item>
        <item>1998</item>
        <item>1997</item>
        <item>1996</item>
        <item>1995</item>
        <item>1994</item>
        <item>1993</item>
        <item>1992</item>
        <item>1991</item>
        <item>1990</item>
        <item>1989</item>
        <item>1988</item>
        <item>1987</item>
        <item>1986</item>
        <item>1985</item>
        <item>1984</item>
        <item>1983</item>
        <item>1982</item>
        <item>1981</item>
        <item>1980</item>
        <item>1979</item>
        <item>1978</item>
        <item>1977</item>
        <item>1976</item>
        <item>1975</item>
        <item>1974</item>
        <item>1973</item>
        <item>1972</item>
        <item>1971</item>
        <item>1970</item>
        <item>1969</item>
        <item>1968</item>
        <item>1967</item>
        <item>1966</item>
        <item>1965</item>
        <item>1964</item>
        <item>1963</item>
        <item>1962</item>
        <item>1961</item>
        <item>1960</item>
        <item>1959</item>
        <item>1958</item>
        <item>1957</item>
        <item>1956</item>
        <item>1955</item>
        <item>1954</item>
        <item>1953</item>
        <item>1952</item>
        <item>1951</item>
        <item>1950</item>
    </string-array>

    <string-array name="rg2_sp_month">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <string-array name="rg2_sp_day">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>

    <string-array name="rg2_sp_state">
        <item>RS</item>
    </string-array>

    <string-array name="rg2_sp_city">
        <item>Canoas</item>
        <item>Porto Alegre</item>
    </string-array>

</resources>
